--- a/web/main/templates/main/modals_assign_tasador.html
+++ b/web/main/templates/main/modals_assign_tasador.html
@@ -32,7 +32,7 @@
                 <div class="form-check">
                   <input class="form-check-input" type="radio" name="tasador" id="tasador_radio" value="{{tasador.user.id}}">
                   <label class="form-check-label" for="tasador_radio" id="nombre">
-                    {{tasador.user.first_name}} {{tasador.user.last_name}}
+                    {{tasador.user.last_name}}, {{tasador.user.first_name}}
                   </label>
                 </div>
               </td>
@@ -44,6 +44,9 @@
             {% endfor %}
           </tbody>
         </table>
+        <div class="alert alert-secondary">
+          Al momento de asignar un tasador, éste será notificado por correo electrónico. El tasador luego deberá aceptar la solicitud.
+        </div>
         <div class="modal-footer">
           <input id="modal_assign_tasador_appraisal_id" name="appraisal_id" type="hidden" value="">
           {% if appraisal.tasadorUser %}
