--- a/web/main/templates/main/modals_assign_visador.html
+++ b/web/main/templates/main/modals_assign_visador.html
@@ -11,7 +11,7 @@
         {% csrf_token %}
         <div class="alert alert-primary text-center" id="ld-alert">
           <div class="ld ld-ring ld-spin" style="font-size:1.0em;"></div>
-          Cargando tasadores
+          Cargando visadores
           <div class="ld ld-ring ld-spin" style="font-size:1.0em;"></div>
         </div>
         <input class="form-control mb-2" placeholder="Buscar visador" id="visador_buscar" style="display:none;"></input>
