--- a/web/main/templates/main/btn_logbook.html
+++ b/web/main/templates/main/btn_logbook.html
@@ -1,8 +1,9 @@
   {% load custom_tags %}
-  {% has_notification_appraisal request.user appraisal.id as hna %}
-  <button type="button" class="btn btn-sm btn-dark {{ hna | yesno:'btn-not,' }} btn_logbook" value="{{appraisal.id}}" id="logbook_{{appraisal.id}}" data-logbook-url="{% url 'ajax_logbook_url' %}" style="border:0px;padding: 3px 5px 1px 5px;">
-    <i class="icon material-icons" style="font-size:15px;vertical-align: text-top;">assignment</i>
-    <div class="ld ld-ring ld-spin" style="display:none;"></div>
+  
+  <button type="button" class="btn {{appraisal.in_conflict|yesno:"btn-danger,btn-dark"}} {{ hna | yesno:'btn-not,' }} btn_logbook" value="{{appraisal.id}}" id="logbook_{{appraisal.id}}" data-table={{table}} data-logbook-url="{% url 'ajax_logbook_url' %}"
+  style="border:0px;width:25px;height:25px;padding:0em;">
+    <i class="icon material-icons" style="font-size:15px;vertical-align:baseline;padding-top:5px">assignment</i>
+    <div class="ld ld-ring ld-spin" style="display:none;margin-top:4px;"></div>
     {% if hna %}
       <span class="notification badge badge-light" style="top:-2px;">NUEVA</span>
     {% endif %}
