--- a/web/main/templates/main/logbook.html
+++ b/web/main/templates/main/logbook.html
@@ -1,6 +1,5 @@
 {% load custom_tags %}
 {% load mathfilters %}
-
   <div class="row mb-2">
     <div class="col-8">
       <a href="{{appraisal.url}}">
@@ -46,138 +45,124 @@
   <hr/>
 
   <!--<h6> Contactos </h6>-->
-  <div class="row mt-2" style="font-size:0.8em;">
-    <div class="col-2">
-      <p class="text-right"><b>Pedido</b></p>
+  <form id="logbook_form">
+    {% csrf_token %}
+    <input name="appraisal_id" value="{{appraisal.id}}" style="width:240px;" hidden>
+    <div class="row mt-2" style="font-size:0.8em;">
+      <div class="col-2">
+        <p class="text-right"><b>Pedido</b></p>
+      </div>
+      <div class="col-3" style="padding:0em;">
+        <p class="text-left">{{appraisal.timeCreated|date:"d/m/Y G:i"}}</p>
+      </div>
+      <div class="col-2">
+        <p class="text-right"><b>Tasador</b></p>
+      </div>
+      <div class="col-4">
+        {% if appraisal.tasadorUser %}
+        <p>
+        {{ appraisal.tasadorUser.first_name }} {{ appraisal.tasadorUser.last_name.strip }}
+        </p>
+        {% else %}
+        <p>
+        <em>No asignado</em>
+        </p>
+        {% endif %}
+      </div>
     </div>
-    <div class="col-3">
-      <p class="text-left">{{appraisal.timeCreated|date:"d/m/Y G:i"}}</p>
+    <div class="row" style="font-size:0.8em;">
+      <div class="col-2">
+        <p class="text-right"><b>Entrega</b></p>
+      </div>
+      <div class="col-3" style="padding:0em;">
+        <p class="text-left">{{appraisal.timeDue|date:"d/m/Y G:i"}}</p>
+      </div>
+      <div class="col-2">
+        <p class="text-right"><b>Visador</b></p>
+      </div>
+      <div class="col-4">
+        {% if appraisal.visadorUser %}
+        <p>
+        {{ appraisal.visadorUser.first_name }} {{ appraisal.visadorUser.last_name.strip }}
+        </p>
+        {% else %}
+        <p>
+        <em>No asignado</em>
+        </p>
+        {% endif %}
+      </div>
+      <div class="col-2" style="text-align:right;">
+        <span style="vertical-align:-webkit-baseline-middle"><b>Ejecutivo/a</b></span>
+      </div>
+      <div class="col-10" style="padding:0em;">
+        <p>
+          <input name="solicitante" class="edit_contact" value="{{appraisal.solicitanteEjecutivo|default_if_none:""}}" placeholder="Nombre" style="width:240px">
+          <input name="solicitanteEmail" class="edit_contact" value="{{appraisal.solicitanteEjecutivoEmail|default_if_none:""}}" placeholder="Email" style="width:180px">
+          <input name="solicitanteTelefono" class="edit_contact" value="{{appraisal.solicitanteEjecutivoTelefono|default_if_none:""}}" placeholder="Teléfono" style="width:100px">
+        </p>
+      </div>
+      <div class="col-2" style="text-align:right;">
+        <span style="vertical-align:-webkit-baseline-middle"><b>Cliente</b></span>
+      </div>
+      <div class="col-8" style="padding:0em;">
+        <p>
+          <input name="cliente" class="edit_contact edit_contact_cliente" value="{{appraisal.cliente|default_if_none:""}}" placeholder="Nombre" style="width:240px;" {{appraisal.clienteValidado|yesno:"readonly,"}}>
+          <input name="clienteEmail" class="edit_contact edit_contact_cliente" value="{{appraisal.clienteEmail|default_if_none:""}}" placeholder="Email" style="width:180px" {{appraisal.clienteValidado|yesno:"readonly,"}}>
+          <input name="clienteTelefono" class="edit_contact edit_contact_cliente" value="{{appraisal.clienteTelefono|default_if_none:""}}" placeholder="Teléfono" style="width:100px" {{appraisal.clienteValidado|yesno:"readonly,"}}>
+        </p>
+      </div>
+      <div class="col-2">
+        <!--
+        {% if perms.appraisal.validate_contact %}
+          {% with appraisal.clienteValidado as validated %}
+            {% with type=1 id="btn_validate_cliente"%}
+              {% include 'main/btn_validate.html' %}
+            {% endwith %}
+          {% endwith %}
+        {% endif %}
+        -->
+        <div class="form-check" style="padding-top:4px">
+          <input type="checkbox" class="form-check-input btn_validate" data-type="1" id="exampleCheck1" {{appraisal.clienteValidado|yesno:"checked,"}}>
+          <label class="form-check-label" for="exampleCheck1">Validado</label>
+        </div>
+      </div>
+      <div class="col-2" style="text-align:right;">
+        <span style="vertical-align:-webkit-baseline-middle"><b>Contacto</b></span>
+      </div>
+      <div class="col-8" style="padding:0em;">
+        <p>
+          <input name="contacto" class="edit_contact edit_contact_contacto" value="{{appraisal.contacto|default_if_none:""}}" placeholder="Nombre" style="width:240px" {{appraisal.contactoValidado|yesno:"readonly,"}}>
+          <input name="contactoEmail" class="edit_contact edit_contact_contacto" value="{{appraisal.contactoEmail|default_if_none:""}}" placeholder="Email" style="width:180px" {{appraisal.contactoValidado|yesno:"readonly,"}}>
+          <input name="contactoTelefono" class="edit_contact edit_contact_contacto" value="{{appraisal.contactoTelefono|default_if_none:""}}" placeholder="Teléfono" style="width:100px" {{appraisal.contactoValidado|yesno:"readonly,"}}>
+        </p>
+      </div>
+      <div class="col-2">
+        <!--
+        {% if perms.appraisal.validate_contact %}
+          {% with appraisal.contactoValidado as validated %}
+            {% with type=2 id="btn_validate_contacto"%}
+              {% include 'main/btn_validate.html' %}
+            {% endwith %}
+          {% endwith %}
+        {% endif %}
+        -->
+        <div class="form-check" style="padding-top:4px">
+          <input type="checkbox" class="form-check-input btn_validate" data-type="2" id="exampleCheck1" {{appraisal.contactoValidado|yesno:"checked,"}}>
+          <label class="form-check-label" for="exampleCheck1">Validado</label>
+        </div>
+      </div>
+      <div class="col-2" style="text-align:right;">
+        <span style="vertical-align:-webkit-baseline-middle"><b>Propietario/a</b></span>
+      </div>
+      <div class="col-10" style="padding:0em;">
+        <p>
+          <input name="propietario" class="edit_contact" value="{{appraisal.propietario|default_if_none:""}}" placeholder="Nombre" style="width:240px">
+          <input name="propietarioEmail" class="edit_contact" value="{{appraisal.propietarioEmail|default_if_none:""}}" placeholder="Email" style="width:180px">
+          <input name="propietarioTelefono" class="edit_contact" value="{{appraisal.propietarioTelefono|default_if_none:""}}" placeholder="Teléfono" style="width:100px">
+        </p>
+      </div>
     </div>
-    <div class="col-2">
-      <p class="text-right"><b>Tasador</b></p>
-    </div>
-    <div class="col-4">
-      {% if appraisal.tasadorUser %}
-      <p>
-      {{ appraisal.tasadorUser.first_name }} {{ appraisal.tasadorUser.last_name.strip }}
-      </p>
-      {% else %}
-      <p>
-      <em>No asignado</em>
-      </p>
-      {% endif %}
-    </div>
-  </div>
-  <div class="row" style="font-size:0.8em;">
-    <div class="col-2">
-      <p class="text-right"><b>Entrega</b></p>
-    </div>
-    <div class="col-3">
-      <p class="text-left">{{appraisal.timeDue|date:"d/m/Y G:i"}}</p>
-    </div>
-    <div class="col-2">
-      <p class="text-right"><b>Visador</b></p>
-    </div>
-    <div class="col-4">
-      {% if appraisal.visadorUser %}
-      <p>
-      {{ appraisal.visadorUser.first_name }} {{ appraisal.visadorUser.last_name.strip }}
-      </p>
-      {% else %}
-      <p>
-      <em>No asignado</em>
-      </p>
-      {% endif %}
-    </div>
-    <div class="col-2">
-      <p class="text-right"><b>Ejecutivo/a</b></p>
-    </div>
-    <div class="col-10">
-      <p>
-      {% if appraisal.solicitanteEjecutivo %}
-      {{ appraisal.solicitanteEjecutivo }},
-      {% if appraisal.solicitanteEjecutivoEmail %}
-      <a href="mailto:{{appraisal.solicitanteEjecutivoEmail}}">{{appraisal.solicitanteEjecutivoEmail}}</a>,
-      {% else %}
-      -, 
-      {% endif %}
-      {% if appraisal.solicitanteEjecutivoTelefono %}
-      {{ appraisal.solicitanteEjecutivoTelefono }}
-      {% else %}
-      -
-      {% endif %}
-      {% else %}
-      <em>No hay información</em>
-      {% endif %}
-      </p>
-    </div>
-    <div class="col-2">
-      <p class="text-right"><b>Cliente</b></p>
-    </div>
-    <div class="col-10">
-      <p>
-      {% if appraisal.cliente %}
-      {{ appraisal.cliente }},
-      {% if appraisal.clienteEmail %}
-      <a href="mailto:{{appraisal.solicitanteEjecutivoEmail}}">{{appraisal.clienteEmail}}</a>,
-      {% else %}
-      -, 
-      {% endif %}
-      {% if appraisal.clienteTelefono %}
-      {{ appraisal.clienteTelefono }}
-      {% else %}
-      -
-      {% endif %}
-      {% else %}
-      <em>No hay información</em>
-      {% endif %}
-      </p>
-    </div>
-    <div class="col-2">
-      <p class="text-right"><b>Contacto</b></p>
-    </div>
-    <div class="col-10">
-      <p>
-      {% if appraisal.contacto %}
-      {{ appraisal.contacto }},
-      {% if appraisal.contactoEmail %}
-      <a href="mailto:{{appraisal.solicitanteEjecutivoEmail}}">{{appraisal.contactoEmail}}</a>,
-      {% else %}
-      -, 
-      {% endif %}
-      {% if appraisal.contactoTelefono %}
-      {{ appraisal.contactoTelefono }}
-      {% else %}
-      -
-      {% endif %}
-      {% else %}
-      <em>No hay información</em>
-      {% endif %}
-      </p>
-    </div>
-    <div class="col-2">
-      <p class="text-right"><b>Propietario/a</b></p>
-    </div>
-    <div class="col-10">
-      <p>
-      {% if appraisal.propietario %}
-      {{ appraisal.propietario }},
-      {% if appraisal.propietarioEmail %}
-      <a href="mailto:{{appraisal.solicitanteEjecutivoEmail}}">{{appraisal.propietarioEmail}}</a>,
-      {% else %}
-      -, 
-      {% endif %}
-      {% if appraisal.propietarioTelefono %}
-      {{ appraisal.propietarioTelefono }}
-      {% else %}
-      -
-      {% endif %}
-      {% else %}
-      <em>No hay información</em>
-      {% endif %}
-      </p>
-    </div>
-  </div>
+  </form>
 
   <hr/>
 
@@ -200,6 +185,9 @@
               <div class="input-group-text"><i class="fa fa-calendar"></i></div>
             </div>
           </div>
+        </div>
+        <div class="alert alert-warning" id="div_warning_incidencia" style="display:none;">
+          La tasación se marcará en conflicto
         </div>
         <div class="alert alert-warning" id="div_warning_entregada" style="display:none;">
           La tasación se marcará como finalizada
@@ -261,36 +249,10 @@
 
       <div id="historial">
 
-        <ul class="list-group">
-        {% for comment in comments %}
-        {% has_notification_comment request.user comment.id as hnc %}
-        {% if hnc %}
-        <li class="list-group-item list-group-item-warning" id="comment_{{comment.id}}">
-        {% else %}
-        <li class="list-group-item" id="comment_{{comment.id}}">
-        {% endif %}
-          <div class="row">
-            <div class="col-2">
-              <small style="color:#666;">{{comment.timeCreated|date:"d/m G:i"}}</small>
-            </div>
-            <div class="col-8">
-              <span style="font-weight:800;color:#000;">{{comment.get_event_display}}</span>
-              <span style="font-size:0.8em;color:#000;">{{comment.user.first_name}} {{comment.user.last_name}}</span>
-              {% if request.user|has_group:"asignador" or user.is_superuser %}
-            </div>
-            <div class="col-2 text-right">
-              <button type="button" data-appraisal-id={{appraisal.id}} data-delete-comment-url="{% url 'ajax_delete_comment_url' %}" data-id="{{comment.id}}" data-event="{{comment.event}}" class="btn btn-light btn-sm delete_comment ml-3" style="border:0px;padding: 3px 5px 1px 5px;">
-                <i class="icon material-icons" style="font-size:15px;vertical-align: text-top;">delete</i>
-                <div class="ld ld-ring ld-spin" style="display:none;"></div>
-              </button>
-            </div>
-          </div>
-          {% endif %}
-          {% if comment.hasText %}
-          <p class="mb-0 mt-2 ml-2" style="color:#333;font-size:0.8em">{{comment.text}}</p>
-          {% endif %}
-        </li>
-        {% endfor %}
+        <ul id="comment_list" class="list-group">
+          {% for comment in comments %}
+            {% include 'main/comment.html' %}
+          {% endfor %}
         </ul>
 
       </div>
